# primesense

./: CMakeLists.txt
Data/: CMakeLists.txt  GlobalDefaults.ini
Platform/Linux/CreateRedist/: RedistMaker  install.sh
Source/: CMakeLists.txt
Source/Utils/: CMakeLists.txt
Source/Utils/XnSensorServer/: CMakeLists.txt  SensorServer.cpp
Source/XnCore/: CMakeLists.txt
Source/XnDDK/: CMakeLists.txt
Source/XnDeviceFile/: CMakeLists.txt
Source/XnDeviceSensorV2/: CMakeLists.txt
Source/XnFormats/: CMakeLists.txt
